valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__node_transition__test__parse_transitions-2.snap
---
source: valhalla-graphtile/src/graph_tile/node_transition.rs
expression: tile.transitions.last().unwrap()
---
NodeTransition {
    end_node_id: 241430249650,
    up: 0,
}
