valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__node_transition__test__parse_transitions.snap
---
source: valhalla-graphtile/src/graph_tile/node_transition.rs
expression: "tile.transitions[0]"
---
NodeTransition {
    end_node_id: 1778766505,
    up: 0,
}
